# ArseneWenger

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  activate  artetaFacts.txt  back-requirements.txt  banned.txt  bot.py  deb_requirements.txt  findMatches.py  getTable.py  last 5 games bot  last5.py  playerstats.py  pyproject.toml  requirements.txt  unaiFacts.txt  utils.py  venvsetup.sh  wengerFacts.txt  wengerSucks.txt
.github/workflows/: pre-commit.yaml
arsene_wenger/: banned.txt  bot.py  utils.py
arsene_wenger/cogs/: example.py  facts.py  fixtures.py  link_fixer.py  memes.py  moderation.py  playerstats.py  reactions.py  tables.py  transfers.py
cogs/: example.py  facts.py  fixtures.py  link_fixer.py  memes.py  moderation.py  playerstats.py  reactions.py  tables.py  transfers.py  twitter_link_fixer.py
facts/: artetaFacts.txt  unaiFacts.txt
src/: bot.py  europaTable.py  playerstats.py
test/: README.md
test/pytest/: common.py  conftest.py  test_examples.py
tests/unit/cogs/: test_fixtures.py
