[tool.poetry]
name = "arsene_wenger"
version = "0.1.0"
description = ""
authors = ["Andrew Reifman-Packett <andrew@reifman.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, <= 3.13"
discord-py = "2.3.2"
bs4 = "0.0.1"
datetime = "4.3"
tabulate = "0.8.9"
Pillow = "10.3.0"
pandas = "1.4.0"
lxml = "4.9.3"
python-fotmob-wrapper = "0.1.8"
requests = "2.31.0"
beautifulsoup4 = "4.10.0"
discord = "^2.3.2"
numpy = "1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
pre-commit = "^3.8.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes/flake8
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # Pep8-Naming
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
